[gd_scene load_steps=17 format=3 uid="uid://c80sedkaxfld6"]

[ext_resource type="Script" uid="uid://btmpglijpqani" path="res://scenes/picture/picture.gd" id="1_sdwuo"]
[ext_resource type="Texture2D" uid="uid://dv8rb44blpgno" path="res://assets/pictures/portrait/portait_128_delay.png" id="3_5naa8"]
[ext_resource type="PackedScene" uid="uid://cqmqwoe520g4p" path="res://scenes/label_delay/label_delay.tscn" id="3_053jb"]
[ext_resource type="Shader" uid="uid://citku0wg37peu" path="res://scenes/picture/magnify.gdshader" id="3_aol1g"]
[ext_resource type="AudioStream" uid="uid://dwke3rt7md7r4" path="res://assets/sounds/horror_pluck.wav" id="4_aol1g"]
[ext_resource type="AudioStream" uid="uid://bnp8d6slxxxka" path="res://assets/sounds/horror_string.wav" id="5_btga1"]
[ext_resource type="Texture2D" uid="uid://si5sh1jxbtwk" path="res://assets/pictures/portrait/portait_128.png" id="5_sf7hp"]
[ext_resource type="AudioStream" uid="uid://waphtiikdx7p" path="res://assets/sounds/horror_piano_c2_d2_e2_f2.wav" id="6_e584m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aol1g"]
shader = ExtResource("3_aol1g")
shader_parameter/x = 0.0
shader_parameter/y = 0.0
shader_parameter/radius = 0.1

[sub_resource type="Animation" id="Animation_053jb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer256/SubViewport256/Sprite256:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_aol1g"]
resource_name = "play_128"
length = 0.2667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite128:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_sdwuo"]
resource_name = "play_256"
length = 0.2666
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer256/SubViewport256/Sprite256:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aol1g"]
_data = {
&"RESET": SubResource("Animation_053jb"),
&"play_128": SubResource("Animation_aol1g"),
&"play_256": SubResource("Animation_sdwuo")
}

[sub_resource type="Animation" id="Animation_xncc6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite128:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_41ujl"]
resource_name = "flash"
length = 0.9667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite128:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.166667, 0.2, 0.266667, 0.3, 0.366667, 0.4, 0.466667, 0.5, 0.566667, 0.6, 0.666667, 0.7, 0.766667, 0.8, 0.866667, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_5naa8"), ExtResource("5_sf7hp"), ExtResource("3_5naa8"), ExtResource("5_sf7hp"), ExtResource("3_5naa8"), ExtResource("5_sf7hp"), ExtResource("3_5naa8"), ExtResource("5_sf7hp"), ExtResource("3_5naa8"), ExtResource("5_sf7hp"), ExtResource("3_5naa8"), ExtResource("5_sf7hp"), ExtResource("3_5naa8"), ExtResource("5_sf7hp"), ExtResource("3_5naa8"), ExtResource("5_sf7hp"), ExtResource("3_5naa8"), ExtResource("5_sf7hp"), ExtResource("3_5naa8")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d6r4k"]
_data = {
&"RESET": SubResource("Animation_xncc6"),
&"flash": SubResource("Animation_41ujl")
}

[node name="Picture" type="Node2D"]
script = ExtResource("1_sdwuo")

[node name="Sprite128" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(64, 64)
centered = false
vframes = 8

[node name="SubViewportContainer256" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_aol1g")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport256" type="SubViewport" parent="SubViewportContainer256"]
disable_3d = true
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="Sprite256" type="Sprite2D" parent="SubViewportContainer256/SubViewport256"]
unique_name_in_owner = true
centered = false
vframes = 8

[node name="AnimationPlayer128" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_aol1g")
}

[node name="AnimationPlayer256" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_aol1g")
}

[node name="AnimationPlayerLastPicture" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_d6r4k")
}

[node name="MarginContainerStart" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(256, 48)
offset_right = 256.0
offset_bottom = 32.0

[node name="LabelDelayStart" parent="MarginContainerStart" instance=ExtResource("3_053jb")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainerEnd" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(256, 32)
offset_top = 205.0
offset_right = 256.0
offset_bottom = 256.0

[node name="LabelDelayEnd" parent="MarginContainerEnd" instance=ExtResource("3_053jb")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainerFinal" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(256, 32)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelDelayFinal" parent="MarginContainerFinal" instance=ExtResource("3_053jb")]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "YOU ARE NEXT"
horizontal_alignment = 1

[node name="TimerTryFindClue" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="TimerLastPicture" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true

[node name="AudioStreamPlayerPluck" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_aol1g")

[node name="AudioStreamPlayerString" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_btga1")

[node name="AudioStreamPlayerPiano" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_e584m")

[connection signal="timeout" from="TimerTryFindClue" to="." method="_on_timer_try_find_clue_timeout"]
[connection signal="timeout" from="TimerLastPicture" to="." method="_on_timer_last_picture_timeout"]
